--- a/Pandigital Pythagorean Triangle/Pandigital Pythagorean Triangle.vcxproj
+++ b/Pandigital Pythagorean Triangle/Pandigital Pythagorean Triangle.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{ad4f7781-bae1-46f9-8471-8afe6fd99431}</ProjectGuid>
-    <RootNamespace>FirstandLast20</RootNamespace>
+    <ProjectGuid>{89aa69d5-850e-4764-a60b-363a08d3a2b9}</ProjectGuid>
+    <RootNamespace>PandigitalPythagoreanTriangle</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -68,7 +68,6 @@
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
-    <Import Project="..\Three sums are square pythag\mpir.props" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -140,7 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="First and last 20.cpp" />
+    <ClCompile Include="Pandigital Pythagorean Triangle.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
