--- a/Heronian 12345678/Heronian 12345678.vcxproj.filters
+++ b/Heronian 12345678/Heronian 12345678.vcxproj.filters
@@ -26,6 +26,9 @@
     <ClInclude Include="json.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\Partition odd even\robin_hood.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="cand_twosquares.json">
